--- a/dys_app/templates/base.html
+++ b/dys_app/templates/base.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="{% static 'dys_app/styles.css' %}">
         <script src="{% static 'dys_app/script.js' %}" defer></script>
 
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+
         <script>
             function toggleMobileNav() {
                 var linksContainer = document.getElementById("mobile-links-container");
@@ -26,11 +29,10 @@
 
             <div class="links-container" id="mobile-links-container">
                 <a class="nav-link" href="{% url 'home' %}">Accueil</a>
-                <a class="nav-link" href="#">Exercices</a>
+                <a class="nav-link" href="{% url 'exercises' %}">Jeux</a>
                 <a class="nav-link" href="{% url 'lessons' %}">Leçons</a>
-                <a class="nav-link" href="#">Contact</a>
                 {% if user.is_authenticated %}
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" href="{% url 'dashboard' %}">Progression</a>
                     <a class="nav-link log-btn" href="{% url 'logout' %}">Déconnexion</a></li>
                 {% else %}
                     <a class="nav-link log-btn" href="{% url 'login' %}">Connexion</a>
@@ -38,7 +40,7 @@
             </div>
 
             <div class="navbar-header">
-                <p class="navbar-title">Dys Application</p>
+                <p class="navbar-title">LexiLearn</p>
                 <div class="menu-btn" onclick="toggleMobileNav()">
                     <img id="menu-icon" src="{% static 'dys_app/images/menu-open.png' %}" alt="Menu Icon">
                 </div>
