--- a/dys_app/templates/home.html
+++ b/dys_app/templates/home.html
@@ -9,11 +9,11 @@
         <header class="header-container">
 
             <div class="header-image">
-                <img src="{% static 'dys_app/images/home_header.jpg' %}" alt="header">
+                <img src="{% static 'dys_app/images/bear.png' %}" alt="header">
             </div>
 
             <div class="header-description">
-                <h1 class="description-title">Bienvenue sur Dys App</h1>
+                <h1 class="description-title">Bienvenue sur LexiLearn</h1>
                 <p>Notre application innovante a été spécialement conçue pour accompagner les enfants sujets à la dyslexie tout 
                     au long de leur parcours éducatif. Nous comprenons que chaque enfant est unique, c'est pourquoi notre 
                     approche repose sur une combinaison de méthodes d'enseignement personnalisées et de technologies de pointe.</p>
